--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
-    "components-font-awesome": "^5.0.6"
+    "font-awesome": "~4.7"
   }
 }
