--- a/package.json
+++ b/package.json
@@ -20,20 +20,16 @@
   },
   "homepage": "https://github.com/Robson16/bootstrap-4-multi-purpose-template#readme",
   "devDependencies": {
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean": "^0.4.0",
-    "gulp-csslint": "^1.0.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-inline-source": "^3.1.0",
-    "gulp-jshint": "^2.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-usemin": "^0.3.29",
-    "jshint": "^2.9.5",
-    "jshint-stylish": "^2.2.1"
+    "gulp-usemin": "^0.3.29"
   }
 }
