--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "parallax.js": "^1.5.0",
     "waypoints": "^4.0.1",
     "Counter-Up": "https://github.com/bfintal/Counter-Up.git#^1.0.0",
-    "ekko-lightbox": "^5.3.0"
+    "ekko-lightbox": "^5.3.0",
+    "slick-carousel": "^1.8.1"
   }
 }
