--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,6 @@
     "waypoints": "^4.0.1",
     "Counter-Up": "https://github.com/bfintal/Counter-Up.git#^1.0.0",
     "ekko-lightbox": "^5.3.0",
-    "slick-carousel": "^1.8.1"
+    "owl.carousel": "^2.3.4"
   }
 }
